[package]
name = "decryptd"
version = "0.1.2"
edition = "2024"
license = "Proprietary"
authors = ["Karpeles Lab Inc"]
repository = "https://github.com/KarpelesLab/decryptd"
rust-version = "1.95"
description = "Generic volunteer GPU job runner for decrypt"
build = "build.rs"

# NOTE: links the CUDA driver (libcuda) for the generic launch path. No nvcc/toolkit
# needed — only the NVIDIA driver. Excluded from the default workspace; built
# standalone for distribution.

[[bin]]
name = "decryptd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
purecrypto = { version = "0.6.7", features = ["hazmat-secp256k1"] }
# Pinned to the same major as klbfw's rsurl (0.1) — two rsurl versions in one binary
# collide on its C FFI symbols (duplicate-symbol link error).
rsurl = { version = "0.1", features = ["json"] }
# In-house compression collection: xz for the result (out); the data blob (in)
# is auto-detected, so pull in the common container formats too.
compcol = { version = "0.6", features = ["std", "xz", "gzip", "bzip2", "zstd"] }
# job.zip = the per-arch cubins.
zip = { version = "2", default-features = false, features = ["deflate"] }
# KarpelesLab platform client: the worker claims fragments with Decrypt/Job:pullOne
# and submits results with :submitFragment, and downloads Decrypt/Data blobs.
klbfw = "0.1"
