[package]
name = "decryptd"
version = "0.1.8"
edition = "2024"
license = "Proprietary"
authors = ["Karpeles Lab Inc"]
repository = "https://github.com/KarpelesLab/decryptd"
rust-version = "1.95"
description = "decryptd — GPU job runner for decrypt"
build = "build.rs"

# NOTE: links the CUDA driver (libcuda) for the generic launch path. No nvcc/toolkit
# needed — only the NVIDIA driver. Excluded from the default workspace; built
# standalone for distribution.

[[bin]]
name = "decryptd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# Decoding inline `data:` blob URLs the platform sometimes hands back in place of
# a presigned HTTP URL (small blobs shipped inline instead of via S3).
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
purecrypto = { version = "0.6.7", features = ["hazmat-secp256k1"] }
# Pinned to the same major as klbfw's rsurl (0.1) — two rsurl versions in one binary
# collide on its C FFI symbols (duplicate-symbol link error).
rsurl = { version = "0.1.4", features = ["json"] }
# In-house compression collection: xz for the result (out); the data blob (in)
# is auto-detected via `factory::detect`, so enable the `factory` runtime
# decoder lookup plus the container formats we can actually decode.
# NOTE: only gzip + xz are enabled. compcol 0.6.6's bzip2 decoder fails on real
# streams (UnexpectedEnd) and its zstd decoder rejects the content-checksum the
# `zstd` CLI writes by default (Unsupported) — both verified against system-tool
# output — so enabling them would advertise support that fails at runtime.
compcol = { version = "0.6", features = ["std", "factory", "xz", "gzip"] }
# job.zip = the per-arch cubins.
zip = { version = "2", default-features = false, features = ["deflate"] }
# KarpelesLab platform client: the worker claims fragments with Decrypt/Job:pullOne
# and submits results with :submitFragment, and downloads Decrypt/Data blobs.
# 0.1.2 fixes a critical upload bug (result submission).
klbfw = "0.1.2"
# Signed in-place auto-updater. The default transport fetches the signed release
# manifest + artifacts over rsurl from the dist-go host; spawn_auto_update keeps
# long-lived workers current, restarting into each new build.
rsupd = "0.3"

# --- optional GUI (tray-icon) deps, enabled by the `gui` feature ---
# System-tray presence with a context menu (version / status / quit) on Windows
# and Linux. tray-icon 0.24 pulls gtk 0.18 on Linux; the loop helpers below are
# pinned to the SAME gtk/glib minor so we don't link two incompatible gtk copies.
tray-icon = { version = "0.24", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
# Desktop notification on launch (and a fallback when the tray is unavailable).
# Pure-Rust zbus backend on Linux (no C FFI to collide on) / WinRT toast on Windows.
notify-rust = { version = "4", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }
glib = { version = "0.18", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", optional = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

# Embeds the application icon (and version info) into decryptd.exe. Host-gated:
# only pulled in when the build *host* is Windows (the release runner), where
# rc.exe from the MSVC toolchain is available to compile the resource.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
# Run as a background system-tray app (Windows + Linux) instead of a console
# worker. The worker pipeline runs on a thread; the tray owns the main thread.
gui = ["dep:tray-icon", "dep:image", "dep:gtk", "dep:glib", "dep:windows-sys", "dep:notify-rust"]
