[package]
name = "decryptd"
version = "0.1.29"
edition = "2024"
license = "Proprietary"
authors = ["Karpeles Lab Inc"]
repository = "https://github.com/KarpelesLab/decryptd"
rust-version = "1.95"
description = "decryptd — GPU job runner for decrypt"
build = "build.rs"

# NOTE: links the CUDA driver (libcuda) for the generic launch path. No nvcc/toolkit
# needed — only the NVIDIA driver. Excluded from the default workspace; built
# standalone for distribution.

[[bin]]
name = "decryptd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
# Decoding inline `data:` blob URLs the platform sometimes hands back in place of
# a presigned HTTP URL (small blobs shipped inline instead of via S3).
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Persistent per-worker id (UUIDv7, time-ordered) sent with every pullOne so the
# platform can attribute a worker's work across restarts.
uuid = { version = "1", features = ["v7"] }
purecrypto = { version = "0.6.7", features = ["hazmat-secp256k1"] }
# Pinned to the same major as klbfw's rsurl (0.1) — two rsurl versions in one binary
# collide on its C FFI symbols (duplicate-symbol link error). 0.1.5 fixes TLS on
# Windows: earlier versions read CA roots only from Unix file paths, so every HTTPS
# call failed with "bad response" (no console → invisible) — breaking pullOne and
# self-update. 0.1.5 falls back to the embedded `cacrt` root bundle.
rsurl = { version = "0.1.5", features = ["json"] }
# In-house compression collection: gzip for the result (out); the data blob (in)
# is auto-detected via `factory::detect` (still xz or gzip), so enable the
# `factory` runtime decoder lookup plus the container formats we can decode.
# NOTE: only gzip + xz are enabled. compcol 0.6.6's bzip2 decoder fails on real
# streams (UnexpectedEnd) and its zstd decoder rejects the content-checksum the
# `zstd` CLI writes by default (Unsupported) — both verified against system-tool
# output — so enabling them would advertise support that fails at runtime.
compcol = { version = "0.6", features = ["std", "factory", "xz", "gzip"] }
# job.zip = the per-arch cubins.
zip = { version = "2", default-features = false, features = ["deflate"] }
# KarpelesLab platform client: the worker claims fragments with Decrypt/Job:pullOne
# and submits results with :submitFragment, and downloads Decrypt/Data blobs.
# 0.1.2 fixes a critical upload bug (result submission).
klbfw = "0.1.2"
# Signed in-place auto-updater. The default transport fetches the signed release
# manifest + artifacts over rsurl from the dist-go host; spawn_auto_update keeps
# long-lived workers current, restarting into each new build.
rsupd = "0.3"

# --- GUI (system-tray) deps, enabled by the `gui` feature (on by default) ---
# ldtray loads every platform toolkit at *runtime* (libdbus/shell32/AppKit via
# libloading) — zero compile-time GUI linkage. So this one binary runs on desktops
# AND headless servers, where `Tray::new` just returns an error we ignore (no link
# error, no crash). It also owns the tray menu, click events, and desktop
# notifications, so we no longer need gtk/glib, windows-sys, tray-icon, or
# notify-rust. `image` decodes the embedded PNG into the RGBA an ldtray Icon wants.
ldtray = { version = "0.1.1", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
# Runtime-load libnvidia-ml (NVML, part of the driver) for live GPU temperature /
# power in the tray — no build-time link, and absent NVML just hides the readout.
libloading = { version = "0.8", optional = true }

# Embeds the application icon (and version info) into decryptd.exe. Host-gated:
# only pulled in when the build *host* is Windows (the release runner), where
# rc.exe from the MSVC toolchain is available to compile the resource.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# SIGUSR1 toggles the worker's pause/resume state — the only pause control on a
# headless Unix box (no tray), and a scriptable one on the desktop (`kill -USR1`).
# signal-hook delivers via a self-pipe to a normal handler thread, so the toggle
# runs ordinary (non-async-signal-safe) code. Unix-only: Windows has no SIGUSR1
# (its tray covers pausing), so the dep is never pulled into the Windows build.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[features]
# System-tray presence (version / status / GPUs / pause / updates / quit) layered
# over the worker pipeline. On by default: ldtray degrades gracefully to headless,
# so a single build serves both desktops and servers — no separate console variant.
# `--no-default-features` drops the tray (and its deps) for a pure worker binary.
default = ["gui"]
gui = ["dep:ldtray", "dep:image", "dep:libloading"]
